HTML stopping json output

--- a/www/templates/statistics.html
+++ b/www/templates/statistics.html
@@ -51,7 +51,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save()">Save</button>
-        <p>{{response}}</p>
+        <!--<p>{{response}}</p>-->
 
 
 <!-- **************************************************************************************************************************************** -->
@@ -103,7 +103,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save2()">Save</button>
-        <p>{{response2}}</p>
+        <!--<p>{{response2}}</p>-->
 
 
 
@@ -157,7 +157,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save3()">Save</button>
-        <p>{{response3}}</p>
+        <!--<p>{{response3}}</p>-->
 
 <!-- **************************************************************************************************************************************** -->
 
@@ -207,7 +207,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save4()">Save</button>
-        <p>{{response4}}</p>
+        <!--<p>{{response4}}</p>-->
 <!-- **************************************************************************************************************************************** -->
 
 <!-- HOLE 5 -->
@@ -256,7 +256,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save5()">Save</button>
-        <p>{{response5}}</p>
+        <!--<p>{{response5}}</p>-->
 
 <!-- **************************************************************************************************************************************** -->
 
@@ -306,7 +306,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save6()">Save</button>
-        <p>{{response6}}</p>
+        <!--<p>{{response6}}</p>-->
 
 <!-- **************************************************************************************************************************************** -->
 
@@ -356,7 +356,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save7()">Save</button>
-        <p>{{response7}}</p>
+        <!--<p>{{response7}}</p>-->
 
 <!-- **************************************************************************************************************************************** -->
 
@@ -406,7 +406,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save8()">Save</button>
-        <p>{{response8}}</p>
+        <!--<p>{{response8}}</p>-->
 
 <!-- **************************************************************************************************************************************** -->
 
@@ -456,7 +456,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save9()">Save</button>
-        <p>{{response9}}</p>
+        <!--<p>{{response9}}</p>-->
 
 
 <!-- **************************************************************************************************************************************** -->
@@ -507,7 +507,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save10()">Save</button>
-        <p>{{response10}}</p>
+        <!--<p>{{response10}}</p>-->
 
 
 <!-- **************************************************************************************************************************************** -->
@@ -558,7 +558,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save11()">Save</button>
-        <p>{{response11}}</p>
+        <!--<p>{{response11}}</p>-->
 
 
 <!-- **************************************************************************************************************************************** -->
@@ -609,7 +609,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save12()">Save</button>
-        <p>{{response12}}</p>
+        <!--<p>{{response12}}</p>-->
 
 
 <!-- **************************************************************************************************************************************** -->
@@ -660,7 +660,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save13()">Save</button>
-        <p>{{response13}}</p>
+        <!--<p>{{response13}}</p>-->
 
 
 <!-- **************************************************************************************************************************************** -->
@@ -711,7 +711,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save14()">Save</button>
-        <p>{{response14}}</p>
+        <!--<p>{{response14}}</p>-->
 
 <!-- **************************************************************************************************************************************** -->
 
@@ -761,7 +761,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save15()">Save</button>
-        <p>{{response15}}</p>
+        <!--<p>{{response15}}</p>-->
 
 <!-- **************************************************************************************************************************************** -->
 
@@ -811,7 +811,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save16()">Save</button>
-        <p>{{response16}}</p>
+        <!--<p>{{response16}}</p>-->
 
 <!-- **************************************************************************************************************************************** -->
 
@@ -861,7 +861,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save17()">Save</button>
-        <p>{{response17}}</p>
+        <!--<p>{{response17}}</p>-->
 
 <!-- **************************************************************************************************************************************** -->
 
@@ -911,7 +911,7 @@
             </label>
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save18()">Save</button>
-        <p>{{response18}}</p>
+        <!-- <p>{{response18}}</p> -->
 
 <!-- **************************************************************************************************************************************** -->
 
