Setup for Displaying info
Getting the information displayed from the database on the app

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,3 +1,13 @@
 <ion-view title="Settings" id="page4" style="background-color:#08F939;">
-    <ion-content padding="true" class="has-header"></ion-content>
+    <ion-content padding="true" class="has-header">
+    
+        <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click()">Hole 1 stats</button>
+        <p>{{response}}</p>
+    
+    
+    
+    
+    
+    
+    </ion-content>
 </ion-view>
