--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -3,6 +3,103 @@
     
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click()">Hole 1 stats</button>
         <p>{{response}}</p>
+        
+<!-- **************************************************************************************************************************************** -->
+        
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click2()">Hole 2 stats</button>
+        <p>{{response1}}</p>
+        
+<!-- **************************************************************************************************************************************** -->
+        
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click3()">Hole 3 stats</button>
+        <p>{{response2}}</p>
+        
+<!-- **************************************************************************************************************************************** -->
+        
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click4()">Hole 4 stats</button>
+        <p>{{response3}}</p>
+        
+<!-- *************************************************************************************************************************************** -->
+        
+        
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click5()">Hole 5 stats</button>
+        <p>{{response4}}</p>
+        
+        
+<!-- *****************************************************************************************************************************************-->
+        
+        
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click6()">Hole 6 stats</button>
+        <p>{{response5}}</p>
+        
+<!-- ****************************************************************************************************************************************-->
+ 
+      <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click7()">Hole 7 stats</button>
+        <p>{{response6}}</p>
+
+
+<!-- ****************************************************************************************************************************************** -->
+        
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click8()">Hole 8 stats</button>
+        <p>{{response7}}</p>
+        
+        
+<!-- ****************************************************************************************************************************************** -->
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click9()">Hole 9 stats</button>
+        <p>{{response8}}</p>
+        
+<!-- ****************************************************************************************************************************************** -->
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click10()">Hole 10 stats</button>
+        <p>{{response9}}</p>
+        
+        
+<!-- ****************************************************************************************************************************************** -->
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click11()">Hole 11 stats</button>
+        <p>{{response10}}</p>
+        
+        
+<!-- ****************************************************************************************************************************************** -->
+        
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click12()">Hole 12 stats</button>
+        <p>{{response11}}</p>
+        
+        
+<!-- ****************************************************************************************************************************************** -->
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click13()">Hole 13 stats</button>
+        <p>{{response12}}</p>
+        
+        
+<!-- ****************************************************************************************************************************************** -->
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click14()">Hole 14 stats</button>
+        <p>{{response13}}</p>
+        
+        
+<!-- ****************************************************************************************************************************************** -->
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click15()">Hole 15 stats</button>
+        <p>{{response14}}</p>
+        
+        
+<!-- ****************************************************************************************************************************************** -->
+        
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click16()">Hole 16 stats</button>
+        <p>{{response15}}</p>
+        
+        
+<!-- ****************************************************************************************************************************************** -->
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click17()">Hole 17 stats</button>
+        <p>{{response16}}</p>
+        
+        
+        
+<!-- ****************************************************************************************************************************************** -->
+              <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click18()">Hole 18 stats</button>
+        <p>{{response17}}</p>
+        
+        
+<!-- ****************************************************************************************************************************************** -->
+<!-- ****************************************************************************************************************************************** -->
+
+
     
     
     
