--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,4 +1,4 @@
-<ion-view title="Settings" id="page4" style="background-color:#08F939;">
+<ion-view title="Your Stats" id="page4" style="background-color:#08F939;">
     <ion-content padding="true" class="has-header" > 
     
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click()">Hole 1 stats</button>
@@ -422,7 +422,7 @@
         
               <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="click3()">Hole 3 stats</button>
         
-        <table border="1" style="background-color:#FFFFCC;border-collapse:collapse;border:1px solid #FFCC00;color:#000000;width:100%" cellpadding="3" cellspacing="3">
+       <table border="1" style="background-color:#FFFFCC;border-collapse:collapse;border:1px solid #FFCC00;color:#000000;width:100%" cellpadding="3" cellspacing="3">
             
     <tr>
 		<td>Par</td>
@@ -467,7 +467,7 @@
 		<td>{{response2[3].GIR}}</td>
 		<td>{{response2[3].Score}}</td>
 		<td>{{response2[3].puttsno}}</td>
-		<td>{{response2[3].bunkershit}}</td>3
+		<td>{{response2[3].bunkershit}}</td>
 		<td>{{response2[3].oob}}</td>
 	</tr>
 	<tr>
@@ -487,7 +487,7 @@
 		<td>{{response2[5].puttsno}}</td>
 		<td>{{response2[5].bunkershit}}</td>
 		<td>{{response2[5].oob}}</td>
-	</tr>
+           </tr>
 	<tr>
 		<td>{{response2[6].Par}}</td>
 		<td>{{response2[6].FIR}}</td>
@@ -528,7 +528,7 @@
 		<td>{{response2[10].Par}}</td>
 		<td>{{response2[10].FIR}}</td>
 		<td>{{response2[10].GIR}}</td>
-		<td>{{respons2e2[10].Score}}</td>
+		<td>{{response2[10].Score}}</td>
 		<td>{{response2[10].puttsno}}</td>
 		<td>{{response2[10].bunkershit}}</td>
 		<td>{{response2[10].oob}}</td>
@@ -3076,8 +3076,8 @@
 		<td>{{response14[15].FIR}}</td>
 		<td>{{response14[15].GIR}}</td>
 		<td>{{response14[15].Score}}</td>
-		<td>{{response4[15].puttsno}}</td>
-		<td>{{response4[15].bunkershit}}</td>
+		<td>{{response14[15].puttsno}}</td>
+		<td>{{response14[15].bunkershit}}</td>
 		<td>{{response14[15].oob}}</td>
 	</tr>
 	<tr>
